--- a/LayoutManager/LayoutManager.csproj
+++ b/LayoutManager/LayoutManager.csproj
@@ -258,10 +258,10 @@
     <Compile Include="Dialogs\SetZoom.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Dialogs\StadardFonts.cs">
+    <Compile Include="Dialogs\StadardPositionProperties.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Dialogs\StadardPositionProperties.cs">
+    <Compile Include="Dialogs\StandardFonts.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Dialogs\StandardFunction.cs">
@@ -433,13 +433,12 @@
       <DependentUpon>SetZoom.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="Dialogs\StadardFonts.resx">
-      <DependentUpon>StadardFonts.cs</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
     <EmbeddedResource Include="Dialogs\StadardPositionProperties.resx">
       <DependentUpon>StadardPositionProperties.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Dialogs\StandardFonts.resx">
+      <DependentUpon>StandardFonts.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Dialogs\StandardFunction.resx">
       <DependentUpon>StandardFunction.cs</DependentUpon>
