--- a/DiMAX/DiMAX.csproj
+++ b/DiMAX/DiMAX.csproj
@@ -82,6 +82,12 @@
     <Compile Include="Dialogs\DiMAXcommandStationProperties.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Dialogs\TestLocoDrive.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Dialogs\TestLocoDrive.Designer.cs">
+      <DependentUpon>TestLocoDrive.cs</DependentUpon>
+    </Compile>
     <Compile Include="Dialogs\TestLocoSelect.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -109,6 +115,9 @@
     <EmbeddedResource Include="Dialogs\DiMAXcommandStationProperties.resx">
       <DependentUpon>DiMAXcommandStationProperties.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Dialogs\TestLocoDrive.resx">
+      <DependentUpon>TestLocoDrive.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Dialogs\TestLocoSelect.resx">
       <DependentUpon>TestLocoSelect.cs</DependentUpon>
