--- a/DiMAX/DiMAX.csproj
+++ b/DiMAX/DiMAX.csproj
@@ -95,6 +95,7 @@
       <DependentUpon>TestLocoSelect.cs</DependentUpon>
     </Compile>
     <Compile Include="DiMAXemulator.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="ModelComponents.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
