--- a/LayoutBaseServices/LayoutBaseServices.csproj
+++ b/LayoutBaseServices/LayoutBaseServices.csproj
@@ -117,6 +117,7 @@
     <Compile Include="AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="InterThreadsEvents.cs" />
     <Compile Include="LayoutAttributes.cs">
       <SubType>Code</SubType>
