--- a/Numato/Numato.csproj
+++ b/Numato/Numato.csproj
@@ -52,6 +52,7 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="ModelComponents.cs" />
+    <Compile Include="NumatorEmulator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RelayBusComponents.cs" />
   </ItemGroup>
