--- a/LayoutCommonUI/LayoutCommonUI.csproj
+++ b/LayoutCommonUI/LayoutCommonUI.csproj
@@ -345,6 +345,12 @@
     <Compile Include="Dialogs\TrainConditionDefinition.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Dialogs\TrainTrackingOptions.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Dialogs\TrainTrackingOptions.Designer.cs">
+      <DependentUpon>TrainTrackingOptions.cs</DependentUpon>
+    </Compile>
     <Compile Include="EventScriptUImanager.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -588,6 +594,9 @@
     <EmbeddedResource Include="Dialogs\TrainConditionDefinition.resx">
       <DependentUpon>TrainConditionDefinition.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Dialogs\TrainTrackingOptions.resx">
+      <DependentUpon>TrainTrackingOptions.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="LayoutControlBusViewer.resx">
       <DependentUpon>LayoutControlBusViewer.cs</DependentUpon>
