More changes for C# 8 & nullable reference types

--- a/LayoutCommonUI/LayoutCommonUI.csproj
+++ b/LayoutCommonUI/LayoutCommonUI.csproj
@@ -355,6 +355,7 @@
     <Compile Include="EventScriptUImanager.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="LayoutControlBusViewer.cs">
       <SubType>Component</SubType>
     </Compile>
