--- a/DiMAX/DiMAX.csproj
+++ b/DiMAX/DiMAX.csproj
@@ -53,6 +53,7 @@
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
     <Prefer32Bit>false</Prefer32Bit>
     <LangVersion>preview</LangVersion>
+    <NoWarn>RCS1003, RCS1001, RCS1146, RCS1029, RCS1036, RCS1136</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
