--- a/LayoutManagerModel/LayoutManagerModel.csproj
+++ b/LayoutManagerModel/LayoutManagerModel.csproj
@@ -68,7 +68,7 @@
     <DebugSymbols>true</DebugSymbols>
     <FileAlignment>4096</FileAlignment>
     <NoStdLib>false</NoStdLib>
-    <NoWarn>RCS1003, RCS1001</NoWarn>
+    <NoWarn>RCS1003, RCS1001, RCS1146, RCS1029</NoWarn>
     <Optimize>false</Optimize>
     <RegisterForComInterop>false</RegisterForComInterop>
     <RemoveIntegerChecks>false</RemoveIntegerChecks>
