--- a/LayoutEmulation/LayoutEmulation.csproj
+++ b/LayoutEmulation/LayoutEmulation.csproj
@@ -68,8 +68,7 @@
     <DebugSymbols>true</DebugSymbols>
     <FileAlignment>4096</FileAlignment>
     <NoStdLib>false</NoStdLib>
-    <NoWarn>
-    </NoWarn>
+    <NoWarn>RCS1003,RCS1001,RCS1163</NoWarn>
     <Optimize>false</Optimize>
     <RegisterForComInterop>false</RegisterForComInterop>
     <RemoveIntegerChecks>false</RemoveIntegerChecks>
