--- a/LayoutTools/LayoutTools.csproj
+++ b/LayoutTools/LayoutTools.csproj
@@ -67,8 +67,7 @@
     <DebugSymbols>true</DebugSymbols>
     <FileAlignment>4096</FileAlignment>
     <NoStdLib>false</NoStdLib>
-    <NoWarn>
-    </NoWarn>
+    <NoWarn>RCS1003, RCS1001, RCS1029, RCS1163, RCS1146, RCS1090</NoWarn>
     <Optimize>false</Optimize>
     <RegisterForComInterop>false</RegisterForComInterop>
     <RemoveIntegerChecks>false</RemoveIntegerChecks>
@@ -448,9 +447,7 @@
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="LayoutControlTools.cs">
     </Compile>
-    <Compile Include="LocomotiveOperationTools.cs">
-      <SubType>Component</SubType>
-    </Compile>
+    <Compile Include="LocomotiveOperationTools.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -459,9 +456,7 @@
     <Compile Include="StandardMenuItems.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="TripPlanTools.cs">
-      <SubType>Component</SubType>
-    </Compile>
+    <Compile Include="TripPlanTools.cs" />
     <EmbeddedResource Include="AutoConnectDialogs\AnnounceCreateNewModule.resx">
       <DependentUpon>AnnounceCreateNewModule.cs</DependentUpon>
     </EmbeddedResource>
