--- a/Intellibox/Intellibox.csproj
+++ b/Intellibox/Intellibox.csproj
@@ -68,8 +68,7 @@
     <DebugSymbols>true</DebugSymbols>
     <FileAlignment>4096</FileAlignment>
     <NoStdLib>false</NoStdLib>
-    <NoWarn>
-    </NoWarn>
+    <NoWarn>RCS1003, RCS1001, RCS1146, RCS1029, RCS1163, RCS1090</NoWarn>
     <Optimize>false</Optimize>
     <RegisterForComInterop>false</RegisterForComInterop>
     <RemoveIntegerChecks>false</RemoveIntegerChecks>
