Removed non-relevant warnings.
 and/or made compatibile with C#8

--- a/LayoutManagerModel/LayoutManagerModel.csproj
+++ b/LayoutManagerModel/LayoutManagerModel.csproj
@@ -200,6 +200,7 @@
     <Compile Include="NRMAprogrammingServices.cs" />
     <Compile Include="SwitchStateSupport.cs" />
     <Compile Include="TaskCompletionSource.cs" />
+    <Compile Include="ValueRange.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
