Started to convert to method dispatch system

--- a/LayoutBaseServices/LayoutBaseServices.csproj
+++ b/LayoutBaseServices/LayoutBaseServices.csproj
@@ -119,4 +119,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Windows.Compatibility" Version="6.0.0" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MethodDispatcher\MethodDispatcher.csproj" />
+  </ItemGroup>
 </Project>
